--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Parcel Sandbox</title>
+        <meta charset="UTF-8" />
+    </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
+    <body>
+        <div id="app"></div>
+        <p>仮想DOMを用いることで複雑化を改善</p>
+        <p>パッケージマネージャーで依存関係を管理</p>
+        <p>ES2015(ES6)で多くの追加機能があった。</p>
+        <p>
+            モジュールハンドラ→複数のjsファイルをまとめたもの<br />
+            トランスパイラ→新しい記法を古い記法に変換してくれる
+        </p>
+        <p>SPAで速度UP!</p>
 
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+        <script src="src/index.js"></script>
+    </body>
 </html>
